@@ -519,7 +519,8 @@ case $# in
      DVIPDF='@DVIPDF@'                   # either 'dvipdf' or ''
      GMALLOC='@GMALLOC@'                 # either 'gmalloc' or ''
      LIBS='@LIBS@'                       # list of system libraries
-     LIBTERMCAP='@LIBTERMCAP@'           # either '-ltermcap' or '-lncurses'
+     LIBTERMCAP='@LIBTERMCAP@'           # '-L/usr/??/lib' or 'broken' or ''
+     INCTERMCAP='@INCTERMCAP@'           # '-I/usr/??/include' or ''
      LIBICONV='@LIBICONV@'               # either '-liconv' or ''
      LIBSIGSEGV='@LTLIBSIGSEGV@'         # '-lsigsegv -L/usr/local/lib' or ''
      X_INCLUDES='@X_INCLUDES@'           # either '-I/usr/somewhere/include' or ''
@@ -966,7 +967,6 @@ if [ "$TSYSOS" = osf1 ] ; then
   LIBICONV=`echo " $LIBICONV " | sed -e 's, -lc ,,g' -e 's,^ ,,' -e 's, $,,'`
   LIBINTL=`echo " $LIBINTL " | sed -e 's, -lc ,,g' -e 's,^ ,,' -e 's, $,,'`
   LIBSIGSEGV=`echo " $LIBSIGSEGV " | sed -e 's, -lc ,,g' -e 's,^ ,,' -e 's, $,,'`
-  LIBTERMCAP=`echo " $LIBTERMCAP " | sed -e 's, -lc ,,g' -e 's,^ ,,' -e 's, $,,'`
 fi
 if [ $TSYS = master -o $TOS = unix ] ; then
   OS_INCLUDES=$OS_INCLUDES' unix'
@@ -1492,6 +1492,10 @@ if [ "${with_termcap_ncurses}" = no -o "${LIBTERMCAP}" = "broken" ] ; then
   XCFLAGS=$XCFLAGS' -DNO_TERMCAP_NCURSES'
   LIBTERMCAP=""
 fi
+if [ "${LIBTERMCAP}" != "broken" -a -n "${LIBTERMCAP}" ]; then
+  XCFLAGS=${XCFLAGS}" ${INCTERMCAP}"
+  XLDFLAGS=${XLDFLAGS}" ${LIBTERMCAP}"
+fi
 
 # the type of library naming
 if [ ${HOS} = "win32" -a ${HSYS} != "win32gcc" ]; then
@@ -1531,22 +1535,20 @@ if [ $HOS = unix -o $HOS = win32 ] ; then
   LIBS=$XCL_CHARSETLIB' '$LIBS
 fi
 
-if [ $TOS = unix ] ; then
-  if [ "${with_readline}" = no ]; then
-    # --without-readline was supplied
-    XCFLAGS=$XCFLAGS' -DNO_READLINE'
-  else
-    FILES='libnoreadline.a '$FILES
-    if grep "#undef HAVE_READLINE" unixconf.h >/dev/null 2>&1; then
-      if [ "${with_readline}" != ifpossible ]; then
-        # --with-readline was supplied ==> barf when readline is missing
-        echol "makemake: configure failed to detect readline" >&2
-        exit 1
-      fi
-    else                          # readline is present
-      if [ "${with_dynamic_ffi}" != no ]; then
-        BASE_MODULES=${BASE_MODULES}" readline"
-      fi
+if [ "${with_readline}" = no ]; then
+  # --without-readline was supplied
+  XCFLAGS=$XCFLAGS' -DNO_READLINE'
+else
+  FILES='libnoreadline.a '$FILES
+  if grep "#undef HAVE_READLINE" unixconf.h >/dev/null 2>&1; then
+    if [ "${with_readline}" != ifpossible ]; then
+      # --with-readline was supplied ==> barf when readline is missing
+      echol "makemake: configure failed to detect readline" >&2
+      exit 1
+    fi
+  else                          # readline is present
+    if [ "${with_dynamic_ffi}" != no ]; then
+      BASE_MODULES=${BASE_MODULES}" readline"
     fi
   fi
 fi
