@@ -1,6 +1,8 @@
 2005-10-10  Sam Steingold  <sds@gnu.org>
 
 	* m4/termcap.m4 (CL_TERMCAP): accept --with-termcap-prefix
+	* makemake.in (INCTERMCAP, LIBTERMCAP): add to XCFLAGS & XLDFLAGS
+	allow readline on mingw
 
 2005-10-14  Yaroslav Kavenchuk  <kavenchuk@jenty.by>
 	    Sam Steingold  <sds@gnu.org>
